--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
     "expo": "~52.0.8",
+    "expo-auth-session": "^6.0.0",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
