--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-navigation/bottom-tabs": "^7.0.7",
+    "@react-navigation/drawer": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
     "expo": "~52.0.8",
@@ -21,10 +24,11 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^4.2.0",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
     "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.15"
   },
