--- a/package.json
+++ b/package.json
@@ -13,27 +13,29 @@
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/drawer": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
-    "@react-navigation/native-stack": "^7.1.0",
-    "expo": "~52.0.8",
+    "@react-navigation/native-stack": "^7.1.1",
+    "expo": "~52.0.11",
     "expo-auth-session": "^6.0.0",
     "expo-linear-gradient": "~14.0.1",
+    "expo-modules-core": "^2.0.6",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "lucide-react-native": "^0.460.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native": "^0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.3.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
