--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native/gradle-plugin": "^0.76.3",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/drawer": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
@@ -26,6 +27,7 @@
     "react-native": "^0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
