--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "lucide-react-native": "^0.460.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native": "^0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^4.2.0",
+    "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.15"
   },
