--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.1.1",
     "expo": "~52.0.11",
     "expo-auth-session": "^6.0.0",
+    "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-modules-core": "^2.0.6",
     "expo-status-bar": "~2.0.0",
