--- a/package.json
+++ b/package.json
@@ -11,43 +11,41 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/firestore": "^21.6.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native/gradle-plugin": "^0.76.3",
-    "@react-navigation/bottom-tabs": "^7.0.7",
-    "@react-navigation/drawer": "^7.0.7",
-    "@react-navigation/native": "^7.0.12",
-    "@react-navigation/native-stack": "^7.1.1",
-    "@react-navigation/stack": "^7.0.17",
-    "date-fns": "^2.22.1",
-    "expo": "~52.0.11",
-    "expo-auth-session": "^6.0.0",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/drawer": "^7.0.18",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.14",
+    "@react-navigation/stack": "^7.0.18",
+    "date-fns": "^4.1.0",
+    "expo": "~52.0.14",
+    "expo-auth-session": "~6.0.1",
     "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.1",
-    "expo-modules-core": "^2.0.6",
+    "expo-modules-core": "~2.1.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
-    "lucide-react-native": "^0.460.0",
+    "lucide-react-native": "^0.462.0",
     "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "^0.76.3",
-    "react-native-device-info": "^7.0.0",
+    "react-native-device-info": "^14.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-volume-control": "^1.0.1",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
